--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@ http://www.tooplate.com/view/2097-pop
                 <div class="row">
                     <div class="col-sm-12 col-md-6 col-lg-6 col-md-col-xl-6 mb-md-0 mb-sm-4 mb-4 tm-site-header-col">
                         <div class="tm-site-header">
-                            <h1 class="mb-4">Diseño Valeria</h1>
+                            <h1 class="mb-4">Vivienda Plurifamilar en Bloque</h1>
                             <img src="img/underline.png" class="img-fluid mb-4">
-                            <p>New HTML Template with pop up pages and use this layout for your website</p>        
+                            <p>Vive en un nuevo concepto de vivienda: Moderno edificio cerca del FORUM y parque Tico Medina. Diseño innovador y alta calidad. Disfruta de un estilo de vida actual y sostenible.</p>        
                         </div>                        
                     </div>
                     <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6">
@@ -50,7 +50,7 @@ http://www.tooplate.com/view/2097-pop
                                         <div class="product__description">
                                             <div class="row mb-3">
                                                 <div class="col-12">
-                                                    <h2 class="tm-page-title">Welcome to Pop Design</h2>        
+                                                    <h2 class="tm-page-title">PROYECTO VIVIENDA PLURIFAMILIAR EN BLOQUE</h2>        
                                                 </div>
                                             </div>                                        
                                             <div class="row">
@@ -185,9 +185,9 @@ http://www.tooplate.com/view/2097-pop
                 </div>                
             </div>
             <footer>
-                <p class="small tm-copyright-text">Copyright &copy; <span class="tm-current-year">2018</span> Your Company. 
+                <p class="small tm-copyright-text">Copyright &copy; <span class="tm-current-year">2024</span> Valeria. 
                 
-                Layout: Tooplate</p>
+                Granada, España</p>
             </footer>
         </div> <!-- .tm-main-content -->  
     </div>
