--- a/index.html
+++ b/index.html
@@ -185,9 +185,10 @@ http://www.tooplate.com/view/2097-pop
                 </div>                
             </div>
             <footer>
-                <p class="small tm-copyright-text">Copyright &copy; <span class="tm-current-year">2024</span> Valeria. 
+                <!-- <p class="small tm-copyright-text">Copyright &copy; <span class="tm-current-year">2024</span> Valeria. 
                 
-                Granada, España</p>
+                Granada, España</p> -->
+                <p class="small tm-copyright-text">EXPRESIÓN GRÁFICA DE LA TECNOLOGÍA DEL PROYECTO. CURSO 2023-2024. SUBGRUPO B_3</p>
             </footer>
         </div> <!-- .tm-main-content -->  
     </div>
