--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@ http://www.tooplate.com/view/2097-pop
                                 <div class="grid__item" id="home-link">
                                     <div class="product">
                                         <div class="tm-nav-link">
-                                            <i class="fas fa-home fa-3x tm-nav-icon"></i>
-                                            <span class="tm-nav-text">Welcome</span>
+                                            <i class="fas fa-folder-open fa-3x tm-nav-icon"></i>
+                                            <span class="tm-nav-text">Presentación</span>
                                             <div class="product__bg"></div>        
                                         </div>                                    
                                         <div class="product__description">
@@ -55,14 +55,25 @@ http://www.tooplate.com/view/2097-pop
                                             </div>                                        
                                             <div class="row">
                                                 <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6">
-                                                    <img src="img/welcome-1.jpg" class="img-fluid mb-3">
-                                                    <p>You can feel free to use this template for your websites. Please tell your friends about Tooplate website. Thank you.</p>
-                                                    <p>Vivamus placerat in nunc eget volutpat. Etiam tincidunt blandit sapien, sed posuere enim. Ut eget ornare lectus.</p>    
+                                                    <img src="img/foto1.png" class="img-fluid mb-3">
+                                                    <p>Se propone el Proyecto de un nuevo edificio de viviendas plurifamiliares, una innovadora
+                                                        propuesta arquitectónica que busca enriquecer el paisaje urbano de Granada capital.
+                                                        Ubicado en una parcela estratégica cerca del emblemático edificio FORUM y del parque
+                                                        Tico Medina, este desarrollo residencial se erige como un testimonio de modernidad y
+                                                        calidad de vida en la ciudad.</p>
+                                                        <!-- <img src="img/welcome-1.jpg" class="img-fluid mb-3"> -->
+                                                    <!-- <p>Vivamus placerat in nunc eget volutpat. Etiam tincidunt blandit sapien, sed posuere enim. Ut eget ornare lectus.</p>     -->
                                                 </div>
                                                 <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6">
-                                                    <p>Donec eu lectus ligula. Aenean pulvinar dolor et massa lacinia rhoncus sit amet sed mauris. Aliquam dictum nibh et consequat finibus.</p>
-                                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In magna mauris, malesuada ut diam eu, pellentesque fringilla orci.</p>
-                                                    <img src="img/welcome-2.jpg" class="img-fluid">
+                                                    <p>Con un diseño que integra funcionalidad y estética, el edificio contará con sótano bajo
+                                                        rasante, planta baja, tres plantas y un ático con terraza, ofreciendo una amplia variedad de
+                                                        opciones para la vida urbana contemporánea. Además, su construcción se llevará a cabo
+                                                        con sistemas de última generación, garantizando tanto la eficiencia energética como el
+                                                        cumplimiento de las normativas vigentes. </p>
+                                                    <p>La parcela no solo albergará este impresionante edificio, sino que también se dedicará a
+                                                        zonas de parque y ocio urbanizadas, creando así un entorno armonioso que promueve la
+                                                        interacción social y el bienestar de sus residentes. </p>
+                                                    <img src="img/foto2.png" class="img-fluid">
                                                 </div>                                        
                                             </div>
                                             
@@ -104,31 +115,34 @@ http://www.tooplate.com/view/2097-pop
                                     <div class="product">
                                         <div class="tm-nav-link">
                                             <i class="fas fa-handshake fa-3x tm-nav-icon"></i>
-                                            <span class="tm-nav-text">Our Work</span>
+                                            <span class="tm-nav-text">Imágenes</span>
                                             <div class="product__bg"></div>             
                                         </div>                                                                 
                                         <div class="product__description">
                                             <div class="p-sm-4 p-2">
                                                 <div class="row mb-3">
                                                     <div class="col-12">
-                                                        <h2 class="tm-page-title">Our Work</h2>        
+                                                        <h2 class="tm-page-title">Imágenes Tomadas:</h2>        
                                                     </div>
                                                 </div>
                                                 <div class="row mb-3">
                                                     <div class="col-12">
-                                                        <p>Aliquam interdum, nisl sed faucibus tempor, massa velit laoreet ipsum, et faucibus sapien magna at enim. Suspendisse a dictum tortor, vel rhoncus libero. Integer at lacus velit. Nullam dapibus venenatis placerat.</p>
+                                                        <h4>PROYECTO VIVIENDA PLURIFAMILIAR EN BLOQUE</h4>
+                                                        <span>ETS de Ingeniería de Edificación, UGR Granada</span>
                                                     </div>
                                                 </div>
                                                 <div class="row">
                                                     <div class="col-12">
                                                         <div class="p-sm-4 p-2 tm-img-container">
                                                             <div class="tm-img-slider" id="tmImgSlider">
-                                                              <img src="img/gallery-img-01-tn.jpg" alt="Image" class="tm-slider-img">
-                                                              <img src="img/gallery-img-02-tn.jpg" alt="Image" class="tm-slider-img">
-                                                              <img src="img/gallery-img-03-tn.jpg" alt="Image" class="tm-slider-img">
-                                                              <img src="img/gallery-img-04-tn.jpg" alt="Image" class="tm-slider-img">
-                                                              <img src="img/gallery-img-05-tn.jpg" alt="Image" class="tm-slider-img">
-                                                              <img src="img/gallery-img-06-tn.jpg" alt="Image" class="tm-slider-img">
+                                                              <img src="img/foto1.png" alt="Image" class="tm-slider-img">
+                                                              <img src="img/foto2.png" alt="Image" class="tm-slider-img">
+                                                              <img src="img/foto3.png" alt="Image" class="tm-slider-img">
+                                                              <img src="img/foto4.png" alt="Image" class="tm-slider-img">
+                                                              <img src="img/foto5.png" alt="Image" class="tm-slider-img">
+                                                              <img src="img/foto6.png" alt="Image" class="tm-slider-img">
+                                                              <img src="img/foto7.png" alt="Image" class="tm-slider-img">
+                                                              <img src="img/foto8.png" alt="Image" class="tm-slider-img">
                                                             </div>
                                                         </div>  
                                                     </div>
