--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@ http://www.tooplate.com/view/2097-pop
                 <!-- <p class="small tm-copyright-text">Copyright &copy; <span class="tm-current-year">2024</span> Valeria. 
                 
                 Granada, España</p> -->
-                <p class="small tm-copyright-text">EXPRESIÓN GRÁFICA DE LA TECNOLOGÍA DEL PROYECTO. CURSO 2023-2024 - SUBGRUPO B-3</p>
+                <p class="small tm-copyright-text">EXPRESIÓN GRÁFICA DE LA TECNOLOGÍA DEL PROYECTO. CURSO 2023-2024 - B-3</p>
             </footer>
         </div> <!-- .tm-main-content -->  
     </div>
